# reconciler-backend

./: .gitmodules  README.md  WORKSPACE.bazel  docker-compose.yml
.github/workflows/: rust.yml
api-reconciliation-tasks-handler/: Cargo.toml
api-reconciliation-tasks-handler/src/: main.rs
svc-file-chunks-upload-manager/: BUILD.bazel
svc-file-chunks-upload-manager/src/: main.rs
svc-file-chunks-upload-manager/src/internal/interfaces/: file_chunk_upload_service.rs
svc-file-chunks-upload-manager/src/internal/models/entities/: file_upload_chunk.rs  recon_task.rs
svc-file-chunks-upload-manager/src/internal/models/view_models/: upload_file_chunk_request.rs
svc-file-chunks-upload-manager/src/internal/services/: file_upload_service.rs
svc-file-upload-manager/: README.md
svc-file-upload-manager/src/: main.rs
svc-file-upload-manager/src/core/interfaces/: file_upload_repo.rs  file_upload_service.rs
svc-file-upload-manager/src/core/models/: file_upload_chunk.rs
svc-file-upload-manager/src/core/services/: file_upload_service.rs
svc-file-upload-manager/src/core/view_models/: upload_file_chunk_request.rs
svc-file-upload-manager/src/internal/: mod.rs
svc-file-upload-manager/src/internal/interfaces/: file_upload_repo.rs  file_upload_service.rs  mod.rs
svc-file-upload-manager/src/repositories/: file_upload_repo.rs
svc-task-details-repository-manager/: BUILD.bazel
svc-task-details-repository-manager/src/: main.rs  services.rs
svc-task-details-repository-manager/src/internal/interfaces/: BUILD.bazel
svc-task-details-repository-manager/src/internal/models/view_models/: BUILD.bazel
svc-task-details-repository-manager/src/repositories/: recon_file_details_repo.rs  recon_task_details_repo.rs
svc-task-details-repository-manager/src/services/: entities.rs  interfaces.rs  recon_task_aggregation.rs  view_models.rs
(+6 files in other folders)
