load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "rust_default_library",
    srcs = [
        "recon_files_repository.rs",
        "recon_tasks_aggregator.rs",
        "recon_tasks_repository.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//svc-task-details-repository-manager/src/internal/models/entities/recon_tasks_models.rs:rust_default_library",
        "//svc-task-details-repository-manager/src/internal/models/entities/app_errors.rs:rust_default_library",
        "//svc-task-details-repository-manager/src/internal/models/view_models/requests.rs:rust_default_library",
        "//svc-task-details-repository-manager/src/internal/models/view_models/responses.rs:rust_default_library",
    ],
)


