load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "rust_default_library",
    srcs = [
        "requests.rs",
        "responses.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//svc-task-details-repository-manager/src/internal/models/entities/recon_tasks_models.rs:rust_default_library",
        "//svc-task-details-repository-manager/src/internal/models/entities/app_errors.rs:rust_default_library",
    ],
)


